--- a/popup/popup.html
+++ b/popup/popup.html
@@ -10,14 +10,17 @@
 
 <body>
     <h1>Today Tasks</h1>
+    <button id="refresh-button" class="btn btn-default">Refresh</button>
     <div class="all-tasks">
-        <div class="task">
-            <img src="https://b2bpolis.atlassian.net/secure/viewavatar?size=xsmall&avatarId=10303&avatarType=issuetype" alt="Bug" class="task-icon">
-            <span class="task-key"><a href="https://b2bpolis.atlassian.net/browse/SCRUM-3099">SCRUM-3099</a></span>
-            <span class="task-summary">Работа подписи у IBG</span>
-            <p class="task-status">Draft</p>
-            <p class="task-description">Составить инструкцию по смене сертификата</p>
-        </div>
+        <!--<template id="task-template">-->
+            <div class="task" id="task">
+                <img src="https://b2bpolis.atlassian.net/secure/viewavatar?size=xsmall&avatarId=10303&avatarType=issuetype" alt="Bug" class="task-icon">
+                <span class="task-key"><a href="https://b2bpolis.atlassian.net/browse/SCRUM-3099">SCRUM-3099</a></span>
+                <span class="task-summary">Работа подписи у IBG</span>
+                <p class="task-status">Draft</p>
+                <p class="task-description">Составить инструкцию по смене сертификата</p>
+            </div>
+        <!--</template>-->
     </div>
     <script src="vendor/js/jquery-3.2.1.js"></script>
     <script src="vendor/js/underscore.js"></script>
